--- a/DesigningCritMoves/DesigningCritMoves.csproj
+++ b/DesigningCritMoves/DesigningCritMoves.csproj
@@ -75,6 +75,7 @@
     <Content Include="assets\bootstrap\js\bootstrap.min.js" />
     <Content Include="index.html" />
     <Content Include="Web.config" />
+    <Content Include="FacultyView.aspx" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AdminPrompt.aspx.cs">
@@ -84,17 +85,24 @@
     <Compile Include="AdminPrompt.aspx.designer.cs">
       <DependentUpon>AdminPrompt.aspx</DependentUpon>
     </Compile>
-    <Compile Include="CritMoves.Master.cs">
-      <DependentUpon>CritMoves.Master</DependentUpon>
+    <Compile Include="FacultyViewMaster.Master.cs">
+      <DependentUpon>FacultyViewMaster.Master</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="CritMoves.Master.designer.cs">
-      <DependentUpon>CritMoves.Master</DependentUpon>
+    <Compile Include="FacultyViewMaster.Master.designer.cs">
+      <DependentUpon>FacultyViewMaster.Master</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="FacultyView.aspx.cs">
+      <DependentUpon>FacultyView.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="FacultyView.aspx.designer.cs">
+      <DependentUpon>FacultyView.aspx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="CritMoves.Master" />
+    <Content Include="FacultyViewMaster.Master" />
     <None Include="packages.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
