--- a/DesigningCritMoves/DesigningCritMoves.csproj
+++ b/DesigningCritMoves/DesigningCritMoves.csproj
@@ -75,7 +75,7 @@
     <Content Include="assets\bootstrap\js\bootstrap.min.js" />
     <Content Include="index.html" />
     <Content Include="Web.config" />
-    <Content Include="FacultyView.aspx" />
+    <Content Include="AdminAddPrompt.aspx" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AdminPrompt.aspx.cs">
@@ -93,12 +93,12 @@
       <DependentUpon>FacultyViewMaster.Master</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="FacultyView.aspx.cs">
-      <DependentUpon>FacultyView.aspx</DependentUpon>
+    <Compile Include="AdminAddPrompt.aspx.cs">
+      <DependentUpon>AdminAddPrompt.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="FacultyView.aspx.designer.cs">
-      <DependentUpon>FacultyView.aspx</DependentUpon>
+    <Compile Include="AdminAddPrompt.aspx.designer.cs">
+      <DependentUpon>AdminAddPrompt.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
