--- a/DesigningCritMoves/DesigningCritMoves.csproj
+++ b/DesigningCritMoves/DesigningCritMoves.csproj
@@ -64,8 +64,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="AdminPagePrompts.html" />
-    <Content Include="AdminPrompt.aspx" />
+    <Content Include="Older_References\AdminPagePrompts.html" />
+    <Content Include="Older_References\AdminPrompt.aspx" />
     <Content Include="assets\bootstrap\css\bootstrap.min.css" />
     <Content Include="assets\css\stylesIndex.css" />
     <Content Include="assets\css\stylesMaster.css" />
@@ -78,11 +78,11 @@
     <Content Include="AdminAddPrompt.aspx" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AdminPrompt.aspx.cs">
+    <Compile Include="Older_References\AdminPrompt.aspx.cs">
       <DependentUpon>AdminPrompt.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="AdminPrompt.aspx.designer.cs">
+    <Compile Include="Older_References\AdminPrompt.aspx.designer.cs">
       <DependentUpon>AdminPrompt.aspx</DependentUpon>
     </Compile>
     <Compile Include="FacultyViewMaster.Master.cs">
