--- a/DesigningCritMoves/DesigningCritMoves.csproj
+++ b/DesigningCritMoves/DesigningCritMoves.csproj
@@ -69,6 +69,7 @@
   <ItemGroup>
     <Content Include="assets\img\Minus.png" />
     <Content Include="assets\img\Plus.png" />
+    <Content Include="assets\img\PlusCircle.png" />
     <Content Include="FacultyEditCourse.aspx" />
     <Content Include="FacultyLandingPage.aspx" />
     <Content Include="FacultyAddCourse.aspx" />
