--- a/DesigningCritMoves/DesigningCritMoves.csproj
+++ b/DesigningCritMoves/DesigningCritMoves.csproj
@@ -70,6 +70,7 @@
     <Content Include="assets\img\Minus.png" />
     <Content Include="assets\img\Plus.png" />
     <Content Include="assets\img\PlusCircle.png" />
+    <Content Include="assets\navbarFunction.js" />
     <Content Include="FacultyEditCourse.aspx" />
     <Content Include="FacultyLandingPage.aspx" />
     <Content Include="FacultyAddCourse.aspx" />
