--- a/DesigningCritMoves/DesigningCritMoves.csproj
+++ b/DesigningCritMoves/DesigningCritMoves.csproj
@@ -72,6 +72,7 @@
     <Content Include="assets\img\Plus.png" />
     <Content Include="assets\img\PlusCircle.png" />
     <Content Include="assets\navbarFunction.js" />
+    <Content Include="CritMoves.accdb" />
     <Content Include="FacultyEditCourse.aspx" />
     <Content Include="FacultyLandingPage.aspx" />
     <Content Include="FacultyAddCourse.aspx" />
