--- a/DesigningCritMoves/DesigningCritMoves.csproj
+++ b/DesigningCritMoves/DesigningCritMoves.csproj
@@ -70,6 +70,7 @@
   <ItemGroup>
     <Content Include="assets\img\editicon.png" />
     <Content Include="assets\img\Minus.png" />
+    <Content Include="assets\img\minusbtn.png" />
     <Content Include="assets\img\Plus.png" />
     <Content Include="assets\img\PlusCircle.png" />
     <Content Include="assets\navbarFunction.js" />
